--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "routes": [
       { "src": "/dashboard", "dest": "/" },
-      {"src": "/roaster", "dest":"/" }, 
+      {"src": "/roster", "dest":"/" }, 
       { "src": "/login", "dest": "/" },
       { "src": "/signup", "dest": "/" },
       { "src": "/", "dest": "/" }
